@@ -6,3 +6,4 @@ help=False
 domain=gphotoframe
 desktop_files=[("share/applications", ("share/gphotoframe.desktop.in",))]
 key_files=[("share/applications/screensavers", ("share/gphotoframe-screensaver.desktop.in",))]
+schemas_files=[("share/gconf/schemas", ("share/gphotoframe.schemas.in",))]
